Quick fix to #project_image vs #project_img mismatch... and some additional overflow parameters for safety

--- a/style.css
+++ b/style.css
@@ -295,6 +295,7 @@ article .icon {
     cursor: pointer;
     height: 100px;
     margin-bottom: 1rem;
+    margin-top: 1rem;
 }
 
 article h3 {
@@ -371,6 +372,7 @@ article p {
     text-align: left;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
+    overflow: hidden;
 }
 
 .subdetail_container:hover {
@@ -378,9 +380,11 @@ article p {
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
 }
 
-.project_img {
-    max-width: 100%;
-    height: 500px;
+.project_image {
+    width: 100%;
+    height: auto;
+    display: block;
+    border-radius: 4px;
 }
 
 /* OTHER PLATFORMS SECTION */
